Regenerating typespec/java with 0.31